tests/sksl/errors/ArgumentModifiers.glsl
### Compilation failed:

error: 2: modifiers on parameter 1 differ between declaration and definition
void test(out int x) {}
          ^^^^^^^^^
1 error
